WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30364
GtkLauncher is using a deprecated signal
https://bugs.webkit.org/show_bug.cgi?id=30364
Summary
GtkLauncher is using a deprecated signal
José Millán Soto
Reported
2009-10-14 11:30:21 PDT
GtkLauncher is using title-changed signal, which is deprecated (
http://webkitgtk.org/reference/index-deprecated.html
).
Attachments
GtkLauncher patch
(1.86 KB, patch)
2009-10-14 11:36 PDT
,
José Millán Soto
jmalonzo
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
José Millán Soto
Comment 1
2009-10-14 11:36:09 PDT
Created
attachment 41174
[details]
GtkLauncher patch This patch changes the signal which GtkLoader uses to follow the page's title from title-changed to notify::title. It also makes GtkLoader not affected by
bug #19843
.
José Millán Soto
Comment 2
2009-10-14 13:26:46 PDT
Ups, GtkLauncher, not GtkLoader
Jan Alonzo
Comment 3
2009-10-14 15:03:10 PDT
Comment on
attachment 41174
[details]
GtkLauncher patch r=me.
WebKit Commit Bot
Comment 4
2009-10-14 15:16:45 PDT
Comment on
attachment 41174
[details]
GtkLauncher patch Rejecting patch 41174 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11436 test cases. fast/css/opacity-float.html -> failed Exiting early after 1 failures. 5146 tests run. 238.99s total testing time 5145 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 1 test case (<1%) had stderr output
Xan Lopez
Comment 5
2009-10-15 00:36:52 PDT
Pushed this manually,
r49611
.
Eric Seidel (no email)
Comment 6
2009-10-15 10:04:37 PDT
It looks like this was a false rejection due to
bug 30098
. My apologies.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug