2009-10-14  José Millán Soto  <jmillan@igalia.com>

Reviewed by Jan Alonzo.

        GtkLauncher is using a deprecated signal
        https://bugs.webkit.org/show_bug.cgi?id=30364

        Modified GtkLauncher to use notify::title signal instead of
        deprecated title-changed signal

        * GtkLauncher/main.c:
        (notify_title_cb):
        (create_browser):

Canonical link: https://commits.webkit.org/41076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49612 268f45cc-cd09-0410-ab3c-d52691b4dbfc